# crm-system

./: .flake8  .gitignore  .pre-commit-config.yaml  404.html  LICENSE  README.md  crm_system.html  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: python-ci.yml
data/: sales_data.csv  sales_data.py
dbt_docs/: index.html  partial_parse.msgpack  run_results.json
dbt_docs/compiled/vendas_dbt/models/bronze/: bronze_vendas.sql
dbt_docs/compiled/vendas_dbt/models/gold/: average_sale_value.sql  average_ticket.sql  best_selling_product_quantity.sql  product_revenue.sql  revenue_per_day.sql  top3_salesperson_quantity.sql  top3_salesperson_value.sql  total_revenue.sql
dbt_docs/compiled/vendas_dbt/models/gold/schema.yml/: not_null_best_selling_product_value_produto.sql  not_null_product_revenue_produto.sql  not_null_revenue_per_day_revenue_per_day.sql  not_null_revenue_per_month_revenue_month.sql  not_null_revenue_per_month_revenue_per_month.sql  not_null_revenue_per_salesperson_email.sql  not_null_revenue_per_year_revenue_per_year.sql  not_null_revenue_per_year_revenue_year.sql  not_null_sales_per_day_sales_date.sql  not_null_sales_per_month_sales_month.sql  not_null_sales_per_year_sales_per_year.sql  not_null_sales_per_year_sales_year.sql  not_null_top_salesperson_quantity_salesperson_total_sales.sql  not_null_top_salesperson_value_salesperson_total_revenue.sql
dbt_docs/run/vendas_dbt/models/bronze/: bronze_vendas.sql
dbt_docs/run/vendas_dbt/models/gold/: average_products_per_sale.sql  product_revenue.sql  revenue_per_month.sql  revenue_per_year.sql  sales_per_month.sql  sales_per_year.sql  top3_salesperson_value.sql
dbt_docs/run/vendas_dbt/models/silver/: silver_vendas.sql
docs/: index.md
docs/dbt_docs/: catalog.json  graph.gpickle  graph_summary.json  manifest.json  partial_parse.msgpack  run_results.json
docs/dbt_docs/compiled/vendas_dbt/models/gold/: average_products_per_sale.sql  best_selling_product_value.sql  revenue_per_month.sql  revenue_per_salesperson.sql  revenue_per_year.sql  sales_per_day.sql  sales_per_month.sql  salse_per_salesperson.sql  top_salesperson_quantity.sql  top_salesperson_value.sql  total_sales.sql
docs/dbt_docs/compiled/vendas_dbt/models/silver/: silver_vendas.sql
docs/dbt_docs/run/vendas_dbt/models/gold/: average_sale_value.sql  average_ticket.sql  best_selling_product_quantity.sql  best_selling_product_value.sql  revenue_per_day.sql  revenue_per_month.sql  revenue_per_salesperson.sql  sales_per_day.sql  sales_per_month.sql  sales_per_salesperson.sql  salse_per_salesperson.sql  top3_salesperson_quantity.sql  (+4 more)
docs/docs_dbt/: catalog.json  graph.gpickle  graph_summary.json  manifest.json  partial_parse.msgpack  run_results.json
llm/: llm.py  st_llm.py  teste.py
search/: search_index.json
src/: app.py  app1.py  app2.py  appbk.py  contract.py  crm_api.py  dash.py  dash2.py  database.py
vendas_dbt/: .gitignore  README.md  dbt_project.yml
vendas_dbt/models/: sources.yml
vendas_dbt/models/bronze/: bronze_vendas.sql
vendas_dbt/models/gold/: average_products_per_sale.sql  average_sale_value.sql  average_ticket.sql  best_selling_product_quantity.sql  best_selling_product_value.sql  product_revenue.sql  revenue_per_day.sql  revenue_per_month.sql  revenue_per_salesperson.sql  revenue_per_year.sql  sales_per_day.sql  sales_per_month.sql  sales_per_salesperson.sql  sales_per_year.sql  schema.yml  top3_salesperson_quantity.sql  top3_salesperson_value.sql  top_salesperson_quantity.sql  top_salesperson_value.sql  total_revenue.sql  total_sales.sql
vendas_dbt/models/silver/: silver_vendas.sql
(+66 files in other folders)
